2012-01-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/array18.adb: New test.
	* gnat.dg/array18_pkg.ads: New helper.

2012-01-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/51791
	* gfortran.dg/typebound_operator_7.f03: Insert parentheses
	around base object in first assignment in main program.
	* gfortran.dg/typebound_operator_10.f03: New test.

2012-01-09  Martin Jambor  <mjambor@suse.cz>

        PR tree-optimization/51759
	* g++.dg/ipa/pr51759.C: New test.

2012-01-09  Tobias Burnus  <burnus@net-b.de>

	PR fortran/51758
	* gfortran.dg/optional_absent_2.f90: New.

2012-01-09  Tobias Burnus  <burnus@net-b.de>

	PR fortran/51578
	* gfortran.dg/use_17.f90: New.

2012-01-09  Gary Funck  <gary@intrepid.com>

	PR preprocessor/33919
	* gcc.dg/pr33919.c: New test.
	* gcc.dg/pr33919-0.h: New test header file.
	* gcc.dg/pr33919-1.h: Ditto.
	* gcc.dg/pr33919-2.h: Ditto.

2012-01-07  Jan Hubicka  <jh@suse.cz>

	PR tree-optimize/51694
	* gcc.c-torture/compile/pr51694.c: new testcase.

2012-01-07  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/51600
	* g++.dg/torture/pr51600.C: New testcase.

2012-01-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR gcov-profile/51715
	PR gcov-profile/51717
	* gcc.misc-tests/gcov-13.c: Skip on 32-bit hppa*-*-hpux*.
	* gcc.misc-tests/gcov-14.c: Likewise.
 
2012-01-06  Jason Merrill  <jason@redhat.com>

	* g++.dg/parse/new5.C: New.

2012-01-06  Patrick Marlier  <patrick.marlier@gmail.com>

	PR testsuite/51655
	* c-c++-common/tm/memcpy-1.c: Declare memcpy instead of
	including <string.h>. 

2012-01-06  Jason Merrill  <jason@redhat.com>

	* g++.dg/abi/mangle51.C: New.
	* g++.dg/abi/mangle52.C: New.
	* g++.dg/abi/mangle53.C: New.
	* g++.dg/abi/mangle54.C: New.
	* g++.dg/abi/mangle55.C: New.
	* g++.dg/abi/mangle56.C: New.
	* g++.dg/abi/mangle57.C: New.
	* g++.dg/abi/mangle58.C: New.
	* g++.dg/abi/mangle59.C: New.
	* g++.dg/cpp0x/trailing3.C: Update mangling.
	* g++.dg/cpp0x/variadic111.C: Update mangling.